--- a/upload.html
+++ b/upload.html
@@ -314,7 +314,7 @@
                 const ext = file.name.split('.').pop().toLowerCase();
 
                 fileName = file.name;
-                const folderName = folderNameInput.value;
+                const folderName = objectNameInput.value;
 
                 if (['obj', 'fbx', 'ply', 'stl', 'step', 'stp'].includes(ext)) {
                     fileNameNoExt = getFileNameWithoutExtension(file);
@@ -365,105 +365,157 @@
                 }
             });
 
+            function replaceSpacesWithUnderscores(str) {
+                return str.replace(/ /g, "-");
+            }
+
+            // ###                 ###
+            // ###      UPLOAD     ###
+            // ###                 ###
+
+            async function uploadToDynamoDB(payload) {
+
+            try { 
+                const requestBody = {
+                    operation: "addMetadata",
+                    payload: payload
+                };
+
+                const metadataResponse = await fetch("https://2uhjohkckl.execute-api.eu-west-3.amazonaws.com/production/uploadObject", {
+                    method: "POST",
+                    headers: { "Content-Type": "application/json" },
+                    body: JSON.stringify(requestBody),
+                    });
+
+                    const metadataResult = await metadataResponse.json();
+
+                    if (metadataResponse.ok) {
+                    console.log("Metadata added successfully:", metadataResult);
+                    } else {
+                    console.error("Failed to add metadata:", metadataResult);
+                    }
+                } catch (error) {
+                    console.error("Error during file upload or metadata storage:", error);
+                }
+            }
+
+            async function getPresignedUrl(file, userID, name, category) {
+                try {
+                    // 1. Request a pre-signed URL
+                    const presignedUrlResponse = await fetch("https://2uhjohkckl.execute-api.eu-west-3.amazonaws.com/production/uploadObject", {
+                        method: "POST",
+                        headers: { "Content-Type": "application/json" },
+                        body: JSON.stringify({
+                            operation: "getPresignedUrl",
+                            payload: {
+                                userID,
+                                name,
+                                filename: file.fileName, // Ensure `file.name` is valid
+                                category,
+                            },
+                        }),
+                    });
+
+                    console.log(presignedUrlResponse);
+
+                    if (!presignedUrlResponse.ok) {
+                        throw new Error(`Failed to fetch presigned URL: ${presignedUrlResponse.statusText}`);
+                    }
+
+                    const presignedUrlResponseJson = await presignedUrlResponse.json();
+                    const { presignedUrl, s3Key } = JSON.parse(presignedUrlResponseJson.body);
+
+                    console.log(presignedUrl);
+                    console.log(s3Key);
+
+                    if (!presignedUrl || !s3Key) {
+                        throw new Error("Presigned URL or S3 key is missing in the response.");
+                    }
+
+                    // 2. Upload the file to S3 using the pre-signed URL
+                    const uploadResponse = await fetch(presignedUrl, {
+                        method: "PUT",
+                        headers: { "Content-Type": file.type || "application/octet-stream" },
+                        body: file,
+                    });
+
+                    if (!uploadResponse.ok) {
+                        throw new Error(`Failed to upload file to S3: ${uploadResponse.statusText}`);
+                    }
+
+                    console.log("File uploaded successfully to S3!");
+
+                    // Return the pre-signed URL and S3 key
+                    return { presignedUrl, s3Key };
+                } catch (error) {
+                    console.error("Error in getPresignedUrl:", error.message);
+                    throw error; // Rethrow to propagate the error to the caller
+                }
+            }
+
+
+            async function uploadFiles() {
+
+                if (!userID) {
+                    alert('User ID not set. Please log in.');
+                    return;
+                }
+
+                const objectName = document.getElementById('file-name-input').value;
+                noSpaceObjectName = replaceSpacesWithUnderscores(objectName);
+
+                // Prepare file data (base64 encoded)
+                const fileData = [];
+
+                for (const categoryKey of Object.keys(categories)) {
+                    const files = categories[categoryKey];
+
+                    for (const file of files) {
+                        if (!(file.file instanceof File)) {
+                            throw new Error('The provided value is not a valid File object.');
+                        }
+
+                        const { presignedUrl, s3Key } = await getPresignedUrl(file, userID, objectName, categoryKey);
+
+                        fileData.push({
+                        category: categoryKey,
+                        filename: file.fileName,
+                        url: s3Key,
+                    });
+                }
+
+                // Payload to send to Lambda
+                const payload = {
+                    userID: userID, 
+                    name: noSpaceObjectName,
+                    timestamp: new Date().toISOString(),
+                    files: fileData
+                };
+                console.log('payload');
+                console.log(payload);
+                await uploadToDynamoDB(payload);
+            }
+        }
+
             form.addEventListener('submit', async function(e) {
                 e.preventDefault(); // Prevent the default form submission
-                if (folderNameInput.value === '') {
+                if (objectNameInput.value === '') {
                     alert("Entrez un nom d'objet"); // Alert if the input is empty
                 } else {
 
                     await uploadFiles();
-                    setTimeout(() => {
-                            document.getElementById('dot-circle').style.display = 'none';
-                            document.getElementById('loading-text').style.display = 'none';
-                            document.getElementById('ending-text').style.display = 'flex';
-                            setTimeout(() => {
-                                hideLoading();
-                            }, 2000); // Hide after 2 seconds, for example
-                        }, 8000); // Delay of 2000 milliseconds (2 seconds)
+                    // setTimeout(() => {
+                    //         document.getElementById('dot-circle').style.display = 'none';
+                    //         document.getElementById('loading-text').style.display = 'none';
+                    //         document.getElementById('ending-text').style.display = 'flex';
+                    //         setTimeout(() => {
+                    //             hideLoading();
+                    //         }, 2000); // Hide after 2 seconds, for example
+                    //     }, 8000); // Delay of 2000 milliseconds (2 seconds)
                     }
                 });
             });
-
-        function replaceSpacesWithUnderscores(str) {
-            return str.replace(/ /g, "-");
-        }
-
-        // ###                 ###
-        // ###      UPLOAD     ###
-        // ###                 ###
-
-        async function uploadFiles() {
-
-            const objectName = objectNameInput.value;
-            const files = fileInput.files;
-
-            const noSpaceObjectName = replaceSpacesWithUnderscores(objectName);
-
-            if (files.length === 0) {
-                alert("Please select at least one file.");
-                return;
-            }
-
-            // Prepare file data (base64 encoded)
-            const fileData = [];
-            for (const categoryKey of Object.keys(categories)) {
-                const files = categories[categoryKey];
-
-                // Loop through each file in the category
-                for (const file of files) {
-                    if (!(file.file instanceof File)) {
-                        throw new Error('The provided value is not a valid File object.');
-                    }
-                    const base64Content = await toBase64(file);
-
-                    fileData.push({
-                    category: categoryKey,
-                    filename: file.name,
-                    content: base64Content
-                });
-            }
-
-            // Payload to send to Lambda
-            const payload = {
-                userID: userID,
-                name: noSpaceObjectName,
-                files: fileData
-            };
-
-            try {
-                // Make POST request to API Gateway (which triggers Lambda)
-                const response = await fetch('https://2uhjohkckl.execute-api.eu-west-3.amazonaws.com/production/uploadObject', {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json'
-                    },
-                    body: JSON.stringify(payload)
-                });
-
-                const responseBody = await response.json();
-                if (response.status === 200) {
-                    alert('Files uploaded successfully!');
-                    console.log('Response:', responseBody);
-                } else {
-                    alert('Error uploading files!');
-                    console.log('Error:', responseBody);
-                }
-            } catch (error) {
-                console.error('Request failed', error);
-                alert('Error occurred while uploading.');
-            }
-        }
-
-        // Helper function to convert a file to base64
-        function toBase64(file) {
-            return new Promise((resolve, reject) => {
-                const reader = new FileReader();
-                reader.onloadend = () => resolve(reader.result.split(',')[1]); // Extract base64 string from the data URL
-                reader.onerror = reject;
-                reader.readAsDataURL(file); // Converts the file to a data URL (base64)
-            });
-        }
 
     </script>
-</body>
+</body> 
 </html>
